fix: add Pokemon name overflow ellipsis

--- a/src/index.scss
+++ b/src/index.scss
@@ -74,6 +74,12 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.text-overflow-ellipsis {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
